@@ -1,3 +1,9 @@
+Fri Aug 16 17:16:46 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* Makefile.ov: update for new lib/kadm5 layout
+
+	* api.1/lock.exp: jik's fix for lock test 13
+
 Thu Jul 18 20:18:30 1996  Marc Horowitz  <marc@mit.edu>
 
 	* api.2/init-v2.exp (test150, test151): -s flag is now -S
